Updated markup to have special div area to hold cards so that loading them in would just wipe that area and updated JS fetching of the element correspondingly in loadProjects.js. Added styling for the main section of projects, and fixed small padding issue impacting the display of card titles (h3s nested in anchors had extra padding, edited card styling to prevent this).

--- a/components/projectCard.css
+++ b/components/projectCard.css
@@ -6,6 +6,10 @@ a, h3 {
   padding: 0 var(--spacing-size);
   background-color: var(--background);
 }
+a h3 {
+  padding: 0;
+}
+
 .projectdisplay {
   position: relative;
   text-align: right;
