--- a/main.css
+++ b/main.css
@@ -143,7 +143,7 @@ main img {
   #additional-img {
     display: none;
   }
-  #projects-main {
+  #projects-gallery {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -165,7 +165,7 @@ main img {
     place-items: center;
     gap: var(--spacing-size);
   }
-  #projects-main {
+  #projects-gallery {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -236,6 +236,25 @@ svg text {
 }
 
 /** projects page-specific styling */
+#projects-main {
+  display: grid;
+  row-gap: var(--spacing-size);
+}
+#projects-main div {
+  display: flex;
+  flex-direction: row;
+  column-gap: var(--spacing-size);
+  justify-content: center;
+  width: 100%;
+  button {
+    border-color: var(--background);
+    color: var(--background);
+    background-color: var(--accent-1);
+    margin: 0;
+    width: 15rem;
+    height: 3rem;
+  }
+}
 /** custom component styling */
 project-card {
   background-color: gray;
@@ -365,9 +384,6 @@ button {
   border-radius: var(--form-rounding);
   color: var(--font-color);
   border: 1px solid var(--font-color);
-}
-.toggle {
-  display: hidden;
 }
 
 .invalid {
